--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "focus-trap": "^5.0.2",
     "prismjs": "^1.17.1",
+    "readline": "^1.3.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.3.0",
@@ -25,9 +26,9 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "^3.10.0",
+    "@vue/cli-plugin-unit-mocha": "^3.10.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "@vue/cli-plugin-unit-mocha": "^3.10.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.1.0",
@@ -54,7 +55,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-unused-vars": "off" 
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
